# llama.cpp

./: .gitignore  convert-hf-to-gguf.py  convert-sort-gguf.py  convert.py  convert.sh  ggml-alloc.c  ggml-alloc.h  ggml-backend-impl.h  ggml-backend.c  ggml-backend.h  ggml-opencl.cpp  ggml-opencl.h  ggml-quants.c  ggml.c  ggml.h  llama.cpp  llama.h
common/: common.cpp  common.h  sampling.cpp  sampling.h
early-stop/: early-stop-with-verify.py
examples/: CMakeLists.txt
examples/baby-llama/: baby-llama.cpp
examples/benchmark/: CMakeLists.txt  benchmark-matmult.cpp  benchmark-prefetch.cpp  gen_chatgpt_prompt.py  run.sh
examples/export-lora/: export-lora.cpp
examples/llava/: clip.cpp
examples/main/: CMakeLists.txt  main-chat.cpp  main.cpp
examples/opencl/: CMakeLists.txt  softmax.cpp
examples/perplexity/: perplexity.cpp
examples/prefetch/: CMakeLists.txt  direct_io.cpp
examples/speculative/: README.md  speculative.cpp
ggml/include/: ggml-alloc.h  ggml.h
ggml/src/: ggml-alloc.c  ggml-backend-impl.h  ggml-backend.c  ggml.c
gguf-py/gguf/: gguf_reader.py  gguf_writer.py
include/: llama.h
src/: llama.cpp
tests/: test-backend-ops.cpp  test-rope.cpp
